feat: remove multiple plateform handling, remove unused endpoints